--- a/AZDORestApiExplorer/Presentation/Views/PostCommands.xaml
+++ b/AZDORestApiExplorer/Presentation/Views/PostCommands.xaml
@@ -1,5 +1,5 @@
 ﻿<vncmvvm:ViewBase
-    x:Class="AZDORestApiExplorer.Presentation.Views.PutCommands"
+    x:Class="AZDORestApiExplorer.Presentation.Views.PostCommands"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -32,7 +32,6 @@
                     IsCollapsible="True"  IsCollapsed="False" >
 
 
-
                     <dxlc:LayoutGroup Header="Project Level" 
                                       View="GroupBox"
                                       Orientation="Vertical"
@@ -40,12 +39,12 @@
 
                         <!-- Enbled at Organization and Project Level -->
                         
-                        <!--<dxlc:LayoutItem>
+                        <dxlc:LayoutItem>
                             <Button
                                 Command="{Binding PostWorkItemTypeCommand }"
                                 Content="{Binding PostWorkItemTypeContent, FallbackValue='POST WorkItemType' }"
                                 ToolTip="{Binding PostWorkItemTypeToolTip, FallbackValue='POST WorkItemType ToolTip' }" />
-                        </dxlc:LayoutItem>-->
+                        </dxlc:LayoutItem>
                    
                         
                         <dxlc:LayoutGroup Header="WorkItemType Level" 
