--- a/AZDORestApiExplorer.Git/Presentation/Views/PullRequestMain.xaml
+++ b/AZDORestApiExplorer.Git/Presentation/Views/PullRequestMain.xaml
@@ -24,37 +24,389 @@
         
     </UserControl.Resources>
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
-
-        <vncazdopv:CommonGridHeader x:Name="commonGridHeader" Grid.Row="0" />
+    <dxlc:LayoutGroup Header="Pull Requests"
+        Orientation="Vertical"  View="Tabs">
         
-        <dxg:GridControl x:Name="grdResults" Grid.Row="1"
+        <dxlc:LayoutGroup.GroupBoxStyle>
+            <Style TargetType="dxlc:GroupBox">
+                <Setter Property="Background" Value="Transparent" />
+                <Setter Property="BorderBrush" Value="Transparent" />
+                <Setter Property="BorderThickness" Value="0" />
+                <Setter Property="Padding" Value="0" />
+                <Setter Property="TitleVisibility" Value="Collapsed" />
+            </Style>
+        </dxlc:LayoutGroup.GroupBoxStyle>
+
+        <dxlc:LayoutGroup Header="Repository" >
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+
+                <vncazdopv:CommonGridHeader x:Name="commonGridHeader" Grid.Row="0" />
+
+                <dxg:GridControl x:Name="grdResults" Grid.Row="1"
                     ItemsSource="{Binding Results.ResultItems}"
                     SelectedItem="{Binding Results.SelectedItem}"
                     FontSize="12"
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
-            <dxg:GridColumn FieldName="title" />
-            <dxg:GridColumn FieldName="description" />
-            <dxg:GridColumn FieldName="pullRequestId" />
-            <dxg:GridColumn FieldName="codeReviewId" />
-            <dxg:GridColumn FieldName="status" />
-            <dxg:GridColumn FieldName="createdBy.uniqueName" />
-            <dxg:GridColumn FieldName="creationDate" />
-            <!--<dxg:GridColumn FieldName="url" />-->
-        </dxg:GridControl>
+                    <dxg:GridColumn FieldName="title" />
+                    <dxg:GridColumn FieldName="description" />
+                    <dxg:GridColumn FieldName="pullRequestId" />
+                    <dxg:GridColumn FieldName="codeReviewId" />
+                    <dxg:GridColumn FieldName="status" />
+                    <dxg:GridColumn FieldName="createdBy.uniqueName" />
+                    <dxg:GridColumn FieldName="creationDate" />
+                    <!--<dxg:GridColumn FieldName="url" />-->
+                </dxg:GridControl>
 
-        <dxe:TextEdit Grid.Row="2"
-            Text="{Binding Results.SelectedItem.url}"
-            TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto" />
+                <dxe:TextEdit Grid.Row="2"
+                    Text="{Binding Results.SelectedItem.url}"
+                    TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto" />
 
-        <TextBlock Text="{Binding Message}" Grid.Row="3" />
-    </Grid>
+                <TextBlock Text="{Binding Message}" Grid.Row="3" />
+            </Grid>
+            
+        </dxlc:LayoutGroup>
+
+        <dxlc:LayoutGroup Header="Attachments" >
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+
+                <vncazdopv:CommonGridHeader x:Name="commonGridHeaderAttachments" Grid.Row="0" />
+
+                <dxg:GridControl x:Name="grdResultsAttachments" Grid.Row="1"
+                    ItemsSource="{Binding Results.ResultItems}"
+                    SelectedItem="{Binding Results.SelectedItem}"
+                    FontSize="12"
+                    ScrollViewer.CanContentScroll="True"
+                    ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                    ScrollViewer.VerticalScrollBarVisibility="Auto">
+                    <dxg:GridColumn FieldName="title" />
+                    <dxg:GridColumn FieldName="description" />
+                    <dxg:GridColumn FieldName="pullRequestId" />
+                    <dxg:GridColumn FieldName="codeReviewId" />
+                    <dxg:GridColumn FieldName="status" />
+                    <dxg:GridColumn FieldName="createdBy.uniqueName" />
+                    <dxg:GridColumn FieldName="creationDate" />
+                    <!--<dxg:GridColumn FieldName="url" />-->
+                </dxg:GridControl>
+
+                <dxe:TextEdit Grid.Row="2"
+                    Text="{Binding Results.SelectedItem.url}"
+                    TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto" />
+
+                <TextBlock Text="{Binding Message}" Grid.Row="3" />
+            </Grid>
+
+        </dxlc:LayoutGroup>
+
+        <dxlc:LayoutGroup Header="Commits" >
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+
+                <vncazdopv:CommonGridHeader x:Name="commonGridHeaderCommits" Grid.Row="0" />
+
+                <dxg:GridControl x:Name="grdResultsCommits" Grid.Row="1"
+                    ItemsSource="{Binding Results.ResultItems}"
+                    SelectedItem="{Binding Results.SelectedItem}"
+                    FontSize="12"
+                    ScrollViewer.CanContentScroll="True"
+                    ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                    ScrollViewer.VerticalScrollBarVisibility="Auto">
+                    <dxg:GridColumn FieldName="title" />
+                    <dxg:GridColumn FieldName="description" />
+                    <dxg:GridColumn FieldName="pullRequestId" />
+                    <dxg:GridColumn FieldName="codeReviewId" />
+                    <dxg:GridColumn FieldName="status" />
+                    <dxg:GridColumn FieldName="createdBy.uniqueName" />
+                    <dxg:GridColumn FieldName="creationDate" />
+                    <!--<dxg:GridColumn FieldName="url" />-->
+                </dxg:GridControl>
+
+                <dxe:TextEdit Grid.Row="2"
+                    Text="{Binding Results.SelectedItem.url}"
+                    TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto" />
+
+                <TextBlock Text="{Binding Message}" Grid.Row="3" />
+            </Grid>
+
+        </dxlc:LayoutGroup>
+
+        <dxlc:LayoutGroup Header="Iterations" >
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+
+                <vncazdopv:CommonGridHeader x:Name="commonGridHeaderIterations" Grid.Row="0" />
+
+                <dxg:GridControl x:Name="grdResultsIterations" Grid.Row="1"
+                    ItemsSource="{Binding Results.ResultItems}"
+                    SelectedItem="{Binding Results.SelectedItem}"
+                    FontSize="12"
+                    ScrollViewer.CanContentScroll="True"
+                    ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                    ScrollViewer.VerticalScrollBarVisibility="Auto">
+                    <dxg:GridColumn FieldName="title" />
+                    <dxg:GridColumn FieldName="description" />
+                    <dxg:GridColumn FieldName="pullRequestId" />
+                    <dxg:GridColumn FieldName="codeReviewId" />
+                    <dxg:GridColumn FieldName="status" />
+                    <dxg:GridColumn FieldName="createdBy.uniqueName" />
+                    <dxg:GridColumn FieldName="creationDate" />
+                    <!--<dxg:GridColumn FieldName="url" />-->
+                </dxg:GridControl>
+
+                <dxe:TextEdit Grid.Row="2"
+                    Text="{Binding Results.SelectedItem.url}"
+                    TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto" />
+
+                <TextBlock Text="{Binding Message}" Grid.Row="3" />
+            </Grid>
+
+        </dxlc:LayoutGroup>
+
+        <dxlc:LayoutGroup Header="Labels" >
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+
+                <vncazdopv:CommonGridHeader x:Name="commonGridHeaderLabels" Grid.Row="0" />
+
+                <dxg:GridControl x:Name="grdResultsLabels" Grid.Row="1"
+                    ItemsSource="{Binding Results.ResultItems}"
+                    SelectedItem="{Binding Results.SelectedItem}"
+                    FontSize="12"
+                    ScrollViewer.CanContentScroll="True"
+                    ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                    ScrollViewer.VerticalScrollBarVisibility="Auto">
+                    <dxg:GridColumn FieldName="title" />
+                    <dxg:GridColumn FieldName="description" />
+                    <dxg:GridColumn FieldName="pullRequestId" />
+                    <dxg:GridColumn FieldName="codeReviewId" />
+                    <dxg:GridColumn FieldName="status" />
+                    <dxg:GridColumn FieldName="createdBy.uniqueName" />
+                    <dxg:GridColumn FieldName="creationDate" />
+                    <!--<dxg:GridColumn FieldName="url" />-->
+                </dxg:GridControl>
+
+                <dxe:TextEdit Grid.Row="2"
+                    Text="{Binding Results.SelectedItem.url}"
+                    TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto" />
+
+                <TextBlock Text="{Binding Message}" Grid.Row="3" />
+            </Grid>
+
+        </dxlc:LayoutGroup>
+
+        <dxlc:LayoutGroup Header="Properties" >
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+
+                <vncazdopv:CommonGridHeader x:Name="commonGridHeaderProperties" Grid.Row="0" />
+
+                <dxg:GridControl x:Name="grdResultsProperties" Grid.Row="1"
+                    ItemsSource="{Binding Results.ResultItems}"
+                    SelectedItem="{Binding Results.SelectedItem}"
+                    FontSize="12"
+                    ScrollViewer.CanContentScroll="True"
+                    ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                    ScrollViewer.VerticalScrollBarVisibility="Auto">
+                    <dxg:GridColumn FieldName="title" />
+                    <dxg:GridColumn FieldName="description" />
+                    <dxg:GridColumn FieldName="pullRequestId" />
+                    <dxg:GridColumn FieldName="codeReviewId" />
+                    <dxg:GridColumn FieldName="status" />
+                    <dxg:GridColumn FieldName="createdBy.uniqueName" />
+                    <dxg:GridColumn FieldName="creationDate" />
+                    <!--<dxg:GridColumn FieldName="url" />-->
+                </dxg:GridControl>
+
+                <dxe:TextEdit Grid.Row="2"
+                    Text="{Binding Results.SelectedItem.url}"
+                    TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto" />
+
+                <TextBlock Text="{Binding Message}" Grid.Row="3" />
+            </Grid>
+
+        </dxlc:LayoutGroup>
+
+        <dxlc:LayoutGroup Header="Reviewers" >
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+
+                <vncazdopv:CommonGridHeader x:Name="commonGridHeaderReviewers" Grid.Row="0" />
+
+                <dxg:GridControl x:Name="grdResultsReviewers" Grid.Row="1"
+                    ItemsSource="{Binding Results.ResultItems}"
+                    SelectedItem="{Binding Results.SelectedItem}"
+                    FontSize="12"
+                    ScrollViewer.CanContentScroll="True"
+                    ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                    ScrollViewer.VerticalScrollBarVisibility="Auto">
+                    <dxg:GridColumn FieldName="title" />
+                    <dxg:GridColumn FieldName="description" />
+                    <dxg:GridColumn FieldName="pullRequestId" />
+                    <dxg:GridColumn FieldName="codeReviewId" />
+                    <dxg:GridColumn FieldName="status" />
+                    <dxg:GridColumn FieldName="createdBy.uniqueName" />
+                    <dxg:GridColumn FieldName="creationDate" />
+                    <!--<dxg:GridColumn FieldName="url" />-->
+                </dxg:GridControl>
+
+                <dxe:TextEdit Grid.Row="2"
+                    Text="{Binding Results.SelectedItem.url}"
+                    TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto" />
+
+                <TextBlock Text="{Binding Message}" Grid.Row="3" />
+            </Grid>
+
+        </dxlc:LayoutGroup>
+
+        <dxlc:LayoutGroup Header="Statuses" >
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+
+                <vncazdopv:CommonGridHeader x:Name="commonGridHeaderStatuses" Grid.Row="0" />
+
+                <dxg:GridControl x:Name="grdResultsStatuses" Grid.Row="1"
+                    ItemsSource="{Binding Results.ResultItems}"
+                    SelectedItem="{Binding Results.SelectedItem}"
+                    FontSize="12"
+                    ScrollViewer.CanContentScroll="True"
+                    ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                    ScrollViewer.VerticalScrollBarVisibility="Auto">
+                    <dxg:GridColumn FieldName="title" />
+                    <dxg:GridColumn FieldName="description" />
+                    <dxg:GridColumn FieldName="pullRequestId" />
+                    <dxg:GridColumn FieldName="codeReviewId" />
+                    <dxg:GridColumn FieldName="status" />
+                    <dxg:GridColumn FieldName="createdBy.uniqueName" />
+                    <dxg:GridColumn FieldName="creationDate" />
+                    <!--<dxg:GridColumn FieldName="url" />-->
+                </dxg:GridControl>
+
+                <dxe:TextEdit Grid.Row="2"
+                    Text="{Binding Results.SelectedItem.url}"
+                    TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto" />
+
+                <TextBlock Text="{Binding Message}" Grid.Row="3" />
+            </Grid>
+
+        </dxlc:LayoutGroup>
+
+        <dxlc:LayoutGroup Header="Threads" >
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+
+                <vncazdopv:CommonGridHeader x:Name="commonGridHeaderThreads" Grid.Row="0" />
+
+                <dxg:GridControl x:Name="grdResultsThreads" Grid.Row="1"
+                    ItemsSource="{Binding Results.ResultItems}"
+                    SelectedItem="{Binding Results.SelectedItem}"
+                    FontSize="12"
+                    ScrollViewer.CanContentScroll="True"
+                    ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                    ScrollViewer.VerticalScrollBarVisibility="Auto">
+                    <dxg:GridColumn FieldName="title" />
+                    <dxg:GridColumn FieldName="description" />
+                    <dxg:GridColumn FieldName="pullRequestId" />
+                    <dxg:GridColumn FieldName="codeReviewId" />
+                    <dxg:GridColumn FieldName="status" />
+                    <dxg:GridColumn FieldName="createdBy.uniqueName" />
+                    <dxg:GridColumn FieldName="creationDate" />
+                    <!--<dxg:GridColumn FieldName="url" />-->
+                </dxg:GridControl>
+
+                <dxe:TextEdit Grid.Row="2"
+                    Text="{Binding Results.SelectedItem.url}"
+                    TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto" />
+
+                <TextBlock Text="{Binding Message}" Grid.Row="3" />
+            </Grid>
+
+        </dxlc:LayoutGroup>
+
+        <dxlc:LayoutGroup Header="WorkItems" >
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+
+                <vncazdopv:CommonGridHeader x:Name="commonGridHeaderWorkItems" Grid.Row="0" />
+
+                <dxg:GridControl x:Name="grdResultsWorkItems" Grid.Row="1"
+                    ItemsSource="{Binding Results.ResultItems}"
+                    SelectedItem="{Binding Results.SelectedItem}"
+                    FontSize="12"
+                    ScrollViewer.CanContentScroll="True"
+                    ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                    ScrollViewer.VerticalScrollBarVisibility="Auto">
+                    <dxg:GridColumn FieldName="title" />
+                    <dxg:GridColumn FieldName="description" />
+                    <dxg:GridColumn FieldName="pullRequestId" />
+                    <dxg:GridColumn FieldName="codeReviewId" />
+                    <dxg:GridColumn FieldName="status" />
+                    <dxg:GridColumn FieldName="createdBy.uniqueName" />
+                    <dxg:GridColumn FieldName="creationDate" />
+                    <!--<dxg:GridColumn FieldName="url" />-->
+                </dxg:GridControl>
+
+                <dxe:TextEdit Grid.Row="2"
+                    Text="{Binding Results.SelectedItem.url}"
+                    TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto" />
+
+                <TextBlock Text="{Binding Message}" Grid.Row="3" />
+            </Grid>
+
+        </dxlc:LayoutGroup>
+
+    </dxlc:LayoutGroup>
+
 </vncmvvm:ViewBase>
