--- a/AZDORestApiExplorer/Presentation/Views/ContextMain.xaml
+++ b/AZDORestApiExplorer/Presentation/Views/ContextMain.xaml
@@ -112,12 +112,19 @@
             	        IsCollapsible="True"  IsCollapsed="False"
                         Background="{StaticResource CommitColor}">
 
-                        <!--<dxlc:LayoutItem HorizontalAlignment="Left" Label="name:" LabelPosition="Left">
-                        <TextBlock Text="{Binding Context.SelectedCommit.commitId}" />
-                    </dxlc:LayoutItem>-->
-
                         <dxlc:LayoutItem HorizontalAlignment="Left" Label="commitId:" LabelPosition="Left">
                             <TextBlock Text="{Binding Context.SelectedCommit.commitId}" />
+                        </dxlc:LayoutItem>
+                    </dxlc:LayoutGroup>
+
+                    <dxlc:LayoutGroup Header="Pull Request"
+            	        View="GroupBox" Orientation="Vertical"
+            	        VerticalAlignment="Top" HorizontalAlignment="Stretch"
+            	        IsCollapsible="True"  IsCollapsed="False"
+                        Background="{StaticResource CommitColor}">
+
+                        <dxlc:LayoutItem HorizontalAlignment="Left" Label="pullRequestId:" LabelPosition="Left">
+                            <TextBlock Text="{Binding Context.SelectedPullRequest.pullRequestId}" />
                         </dxlc:LayoutItem>
                     </dxlc:LayoutGroup>
                 </dxlc:LayoutGroup>
